--- a/core/widget/src/main/res/xml/big_meal_widget_provider.xml
+++ b/core/widget/src/main/res/xml/big_meal_widget_provider.xml
@@ -4,7 +4,8 @@
     android:minWidth="240dp"
     android:minHeight="50dp"
     android:previewImage="@drawable/widget_big_meal"
+    android:description="@string/meal_widget_description"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="1800000"
+    android:updatePeriodMillis="3600000"
     android:widgetCategory="home_screen">
 </appwidget-provider>
