--- a/core/design-system/src/main/res/drawable/ic_person.xml
+++ b/core/design-system/src/main/res/drawable/ic_person.xml
@@ -1,5 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#FFFFFF" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v1c0,0.55 0.45,1 1,1h14c0.55,0 1,-0.45 1,-1v-1c0,-2.66 -5.33,-4 -8,-4z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M12,11.869C13.823,11.869 15.299,10.257 15.299,8.283C15.299,6.34 13.823,4.795 12,4.795C10.184,4.795 8.692,6.362 8.7,8.298C8.707,10.265 10.177,11.869 12,11.869ZM12,10.551C10.96,10.551 10.078,9.564 10.078,8.298C10.071,7.063 10.952,6.114 12,6.114C13.054,6.114 13.921,7.048 13.921,8.283C13.921,9.549 13.047,10.551 12,10.551ZM7.299,18.875H16.693C17.996,18.875 18.622,18.461 18.622,17.572C18.622,15.5 16.038,12.743 12,12.743C7.962,12.743 5.37,15.5 5.37,17.572C5.37,18.461 5.995,18.875 7.299,18.875ZM7.065,17.557C6.884,17.557 6.817,17.497 6.817,17.361C6.817,16.209 8.677,14.062 12,14.062C15.314,14.062 17.175,16.209 17.175,17.361C17.175,17.497 17.107,17.557 16.927,17.557H7.065Z"
+      android:fillColor="#121212"/>
 </vector>
